# sdemos-site

./: .travis.yml  CNAME  Dockerfile  LICENSE  README.md  bio.markdown  index.html  sdemos-site.cabal  site.hs  stack.yaml
_site/: index.html  posts.html  projects.html
_site/posts/: bari.html  overlays.html
_site/projects/: bingehack.html  csh-eval.html  demos.html  glf.html  lsystems.html  openssh-keys.html  whatsopen.html
css/: default.css
posts/: 2015-08-23-example.markdown  2016-01-16-bari.markdown  2016-11-16-overlays.markdown  bari.markdown  overlays.markdown
projects/: bingehack.html  bingehack.markdown  csh-eval.html  csh-eval.markdown  demos.html  demos.markdown  glf.markdown  lsystems.html  lsystems.markdown  openssh-keys.markdown  whatsopen.markdown
templates/: bio.html  default.html  disqus.html  index.html  list.html  post-list.html  post.html  project-list.html  title.html
